Creatd stylesheet for main-screen

--- a/frontend/src/css/style.less
+++ b/frontend/src/css/style.less
@@ -1,3 +1,7 @@
 @charset "UTF-8";
 // BASE
 @import "../../../frontlibs/bootstrap/less/bootstrap";
+
+
+// Main screen styles
+@import "main-screen";
