--- a/frontend/src/css/style.less
+++ b/frontend/src/css/style.less
@@ -2,6 +2,8 @@
 // BASE
 @import "../../../frontlibs/bootstrap/less/bootstrap";
 
+// Leaflet styles
+@import (less) "../../../frontlibs/leaflet/dist/leaflet.css";
 
 // Main screen styles
 @import "main-screen";
